--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
     "hbs": "^4.1.1",
     "mongoose": "^5.9.26",
     "session-file-store": "^1.4.0"
+  },
+  "devDependencies": {
+    "eslint": "^7.7.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.0"
   }
 }
