--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.17.1",
     "hbs": "^4.1.1",
     "mongoose": "^5.9.26",
+    "multer": "^1.4.2",
     "session-file-store": "^1.4.0"
   },
   "devDependencies": {
